# HobbyGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt  Test.txt
Engine/Include/: Engine.h
Engine/Include/Platform/: PlatformInterface.h
Engine/Include/Platform/Windows/: Windows.h
Engine/Source/: Engine.cpp
Engine/Source/Platform/Windows/: Windows.cpp
Game/Source/: Main.cpp
